refact other project seperate from commons-beantuils